@@ -22,7 +22,7 @@
             <plugin>
                 <groupId>com.agilejava.docbkx</groupId>
                 <artifactId>docbkx-maven-plugin</artifactId>
-                <version>2.0.8</version>
+                <version>2.0.7</version>
                 <executions>
                     <execution>
                         <goals>
