@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE preface PUBLIC "-//OASIS//DTD DocBook XML V4.4//EN"
                  "http://www.oasis-open.org/docbook/xml/4.4/docbookx.dtd">
-<preface>
+<preface id="preface">
 	<title>Preface</title>
 	<para>
 	Application development has seen significant changes in the last years, moving towards a simpler, more agile,
