@@ -16,6 +16,7 @@
 	<classpathentry kind="var" path="M2_REPO/org/springframework/osgi/org.springframework.osgi.iandt.simple.service/1.0-rc2-SNAPSHOT/org.springframework.osgi.iandt.simple.service-1.0-rc2-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/springframework/osgi/cglib-nodep.osgi/2.1.3-SNAPSHOT/cglib-nodep.osgi-2.1.3-SNAPSHOT.jar" sourcepath="/CGLIB_SRC"/>
 	<classpathentry kind="var" path="JUNIT_HOME/junit.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/felix/org.apache.felix.main/1.0.1/org.apache.felix.main-1.0.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/springframework/osgi/spring-osgi-core/1.0-rc2-SNAPSHOT/spring-osgi-core-1.0-rc2-SNAPSHOT.jar" sourcepath="/OSGI_SRC_ROOT/core"/>
 	<classpathentry kind="var" path="M2_REPO/org/osgi/osgi_R4_compendium/1.0/osgi_R4_compendium-1.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/springframework/osgi/spring-osgi-test/1.0-rc2-SNAPSHOT/spring-osgi-test-1.0-rc2-SNAPSHOT.jar" sourcepath="/OSGI_SRC_ROOT/test-support/src/main/java"/>
